--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required (VERSION 3.10)
-project(Msxmlx CXX)
+project(Msxmlx VERSION 1.0.0 LANGUAGES CXX)
 
 option(BUILD_SHARED_LIBS "Build libraries as DLLs" FALSE)
-set(${PROJECT_NAME}_DOXYGEN_OUTPUT_DIRECTORY "" CACHE PATH "Doxygen output directory (empty to disable)")
 
+set(${PROJECT_NAME}_DOXYGEN_OUTPUT_DIRECTORY "" CACHE PATH "Doxygen output directory (empty to disable)")
 if(${PROJECT_NAME}_DOXYGEN_OUTPUT_DIRECTORY)
     find_package(Doxygen)
     if(DOXYGEN_FOUND)
@@ -11,23 +11,20 @@ if(${PROJECT_NAME}_DOXYGEN_OUTPUT_DIRECTORY)
         configure_file(Doxyfile.in ${PROJECT_BINARY_DIR}/Doxyfile)
         add_custom_target(doxygen ALL ${DOXYGEN_EXECUTABLE} ${PROJECT_BINARY_DIR}/Doxyfile
             WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-        COMMENT "Generating API documentation with Doxygen" VERBATIM
+            COMMENT "Generating API documentation with Doxygen" VERBATIM
             SOURCES ${PROJECT_BINARY_DIR}/Doxyfile
-    )
+        )
     endif(DOXYGEN_FOUND)
 endif()
 
-#set(${PROJECT_NAME}_VERSION_MAJOR 0)
-#set(${PROJECT_NAME}_VERSION_MINOR 1)
-#configure_file("${PROJECT_SOURCE_DIR}/Version.h.in" "${PROJECT_BINARY_DIR}/Version.h")
-
 set(PUBLIC_INCLUDE_PATHS
-    include
+    $<INSTALL_INTERFACE:include>    
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 )
 
 set(PRIVATE_INCLUDE_PATHS
     .
-    include/Msxmlx
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Msxmlx
 )
 
 set(SOURCES
@@ -35,9 +32,10 @@ set(SOURCES
     
     Msxmlx.cpp
 )
-source_group(Sources FILE ${SOURCES})
+source_group(Sources FILES ${SOURCES})
 
 add_library(${PROJECT_NAME} ${SOURCES})
+target_include_directories(${PROJECT_NAME} PUBLIC ${PUBLIC_INCLUDE_PATHS} PRIVATE ${PRIVATE_INCLUDE_PATHS})
 target_compile_definitions(${PROJECT_NAME}
     PRIVATE
         -DNOMINMAX
@@ -47,9 +45,12 @@ target_compile_definitions(${PROJECT_NAME}
         -D_SECURE_SCL=0
         -D_SCL_SECURE_NO_WARNINGS
 )
-target_include_directories(${PROJECT_NAME} PUBLIC ${PUBLIC_INCLUDE_PATHS} PRIVATE ${PRIVATE_INCLUDE_PATHS})
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_EXTENSIONS OFF)
+
+#configure_file("${PROJECT_SOURCE_DIR}/Version.h.in" "${PROJECT_BINARY_DIR}/Version.h")
+
+# Testing
 
 if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     include(CTest)
@@ -58,3 +59,51 @@ if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
         add_subdirectory(test)
     endif()
 endif()
+
+# Installation
+
+add_library(Msxmlx::Msxmlx ALIAS Msxmlx)
+
+include(GNUInstallDirs)
+set(INSTALL_CONFIGDIR ${CMAKE_INSTALL_LIBDIR}/cmake/Msxmlx)
+
+install(TARGETS Msxmlx
+    EXPORT msxmlx-targets
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+)
+install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(EXPORT msxmlx-targets
+    FILE MsxmlxTargets.cmake
+    NAMESPACE Msxmlx::
+    DESTINATION ${INSTALL_CONFIGDIR}
+)
+
+#This is required so that the exported target has the name Msxmlx and not msxmlx
+# set_target_properties(msxmlx PROPERTIES EXPORT_NAME Msxmlx)
+
+#Create a ConfigVersion.cmake file
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(
+    ${CMAKE_CURRENT_BINARY_DIR}/MsxmlxConfigVersion.cmake
+    VERSION ${PROJECT_VERSION}
+    COMPATIBILITY AnyNewerVersion
+)
+
+configure_package_config_file(${CMAKE_CURRENT_LIST_DIR}/cmake/MsxmlxConfig.cmake.in
+    ${CMAKE_CURRENT_BINARY_DIR}/MsxmlxConfig.cmake
+    INSTALL_DESTINATION ${INSTALL_CONFIGDIR}
+)
+
+#Install the config, configversion and custom find modules
+install(FILES
+    ${CMAKE_CURRENT_BINARY_DIR}/MsxmlxConfig.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/MsxmlxConfigVersion.cmake
+    DESTINATION ${INSTALL_CONFIGDIR}
+)
+
+# Exporting from the build tree
+export(EXPORT msxmlx-targets FILE ${CMAKE_CURRENT_BINARY_DIR}/MsxmlxTargets.cmake NAMESPACE Msxmlx::)
+
+#Register package in user's package registry
+export(PACKAGE Msxmlx)
