CMake and doxygen cleanup

--- a/cmake/MsxmlxConfig.cmake.in
+++ b/cmake/MsxmlxConfig.cmake.in
@@ -1,8 +1,8 @@
-get_filename_component(Msxmlx_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
+get_filename_component(@PROJECT_NAME@_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
 include(CMakeFindDependencyMacro)
 
-if(NOT TARGET Msxmlx::Msxmlx)
-    include("${Msxmlx_CMAKE_DIR}/MsxmlxTargets.cmake")
+if(NOT TARGET @PROJECT_NAME@::@PROJECT_NAME@)
+    include("${@PROJECT_NAME@_CMAKE_DIR}/@PROJECT_NAME@Targets.cmake")
 endif()
 
-set(Msxmlx_LIBRARIES Msxmlx::Msxmlx)
+set(@PROJECT_NAME@_LIBRARIES @PROJECT_NAME@::@PROJECT_NAME@)
