--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,52 @@
 cmake_minimum_required (VERSION 3.10)
-project(Msxmlx VERSION 1.0.0 LANGUAGES CXX)
+project(Msxmlx VERSION 1.0.0 LANGUAGES CXX DESCRIPTION "MSXML Extensions")
 
 option(BUILD_SHARED_LIBS "Build libraries as DLLs" FALSE)
+
+#########################################################################
+# Build                                                                 #
+#########################################################################
+
+set(PUBLIC_INCLUDE_PATHS
+    $<INSTALL_INTERFACE:include>    
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+)
+
+set(PRIVATE_INCLUDE_PATHS
+    .
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}
+)
+
+set(SOURCES
+    include/Msxmlx/Msxmlx.h
+    
+    Msxmlx.cpp
+)
+source_group(Sources FILES ${SOURCES})
+
+if(NOT CMAKE_DEBUG_POSTFIX)
+  set(CMAKE_DEBUG_POSTFIX d)
+endif()
+
+add_library(${PROJECT_NAME} ${SOURCES})
+target_include_directories(${PROJECT_NAME} PUBLIC ${PUBLIC_INCLUDE_PATHS} PRIVATE ${PRIVATE_INCLUDE_PATHS})
+target_compile_definitions(${PROJECT_NAME}
+    PRIVATE
+        -DNOMINMAX
+        -DWIN32_LEAN_AND_MEAN
+        -DVC_EXTRALEAN
+        -D_CRT_SECURE_NO_WARNINGS
+        -D_SECURE_SCL=0
+        -D_SCL_SECURE_NO_WARNINGS
+)
+target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
+set_target_properties(${PROJECT_NAME} PROPERTIES CXX_EXTENSIONS OFF)
+
+#configure_file("${PROJECT_SOURCE_DIR}/Version.h.in" "${PROJECT_BINARY_DIR}/Version.h")
+
+#########################################################################
+# Documentation                                                         #
+#########################################################################
 
 set(${PROJECT_NAME}_DOXYGEN_OUTPUT_DIRECTORY "" CACHE PATH "Doxygen output directory (empty to disable)")
 if(${PROJECT_NAME}_DOXYGEN_OUTPUT_DIRECTORY)
@@ -17,42 +62,11 @@ if(${PROJECT_NAME}_DOXYGEN_OUTPUT_DIRECTORY)
     endif(DOXYGEN_FOUND)
 endif()
 
-set(PUBLIC_INCLUDE_PATHS
-    $<INSTALL_INTERFACE:include>    
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-)
+#########################################################################
+# Testing                                                               #
+#########################################################################
 
-set(PRIVATE_INCLUDE_PATHS
-    .
-    ${CMAKE_CURRENT_SOURCE_DIR}/include/Msxmlx
-)
-
-set(SOURCES
-    include/Msxmlx/Msxmlx.h
-    
-    Msxmlx.cpp
-)
-source_group(Sources FILES ${SOURCES})
-
-add_library(${PROJECT_NAME} ${SOURCES})
-target_include_directories(${PROJECT_NAME} PUBLIC ${PUBLIC_INCLUDE_PATHS} PRIVATE ${PRIVATE_INCLUDE_PATHS})
-target_compile_definitions(${PROJECT_NAME}
-    PRIVATE
-        -DNOMINMAX
-        -DWIN32_LEAN_AND_MEAN
-        -DVC_EXTRALEAN
-        -D_CRT_SECURE_NO_WARNINGS
-        -D_SECURE_SCL=0
-        -D_SCL_SECURE_NO_WARNINGS
-)
-target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
-set_target_properties(${PROJECT_NAME} PROPERTIES CXX_EXTENSIONS OFF)
-
-#configure_file("${PROJECT_SOURCE_DIR}/Version.h.in" "${PROJECT_BINARY_DIR}/Version.h")
-
-# Testing
-
-if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     include(CTest)
     message(STATUS "Testing is enabled. Turn on BUILD_TESTING to build tests.")
     if(BUILD_TESTING)
@@ -60,50 +74,49 @@ if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     endif()
 endif()
 
-# Installation
+#########################################################################
+# Installation                                                          #
+#########################################################################
 
-add_library(Msxmlx::Msxmlx ALIAS Msxmlx)
+add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 include(GNUInstallDirs)
-set(INSTALL_CONFIGDIR ${CMAKE_INSTALL_LIBDIR}/cmake/Msxmlx)
+set(INSTALL_CONFIGDIR ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
 
-install(TARGETS Msxmlx
-    EXPORT msxmlx-targets
+install(TARGETS ${PROJECT_NAME}
+    EXPORT ${PROJECT_NAME}-targets
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
 install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-install(EXPORT msxmlx-targets
-    FILE MsxmlxTargets.cmake
-    NAMESPACE Msxmlx::
+install(EXPORT ${PROJECT_NAME}-targets
+    FILE ${PROJECT_NAME}Targets.cmake
+    NAMESPACE ${PROJECT_NAME}::
     DESTINATION ${INSTALL_CONFIGDIR}
 )
 
-#This is required so that the exported target has the name Msxmlx and not msxmlx
-# set_target_properties(msxmlx PROPERTIES EXPORT_NAME Msxmlx)
-
-#Create a ConfigVersion.cmake file
+# Create a ConfigVersion.cmake file
 include(CMakePackageConfigHelpers)
 write_basic_package_version_file(
-    ${CMAKE_CURRENT_BINARY_DIR}/MsxmlxConfigVersion.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
     VERSION ${PROJECT_VERSION}
     COMPATIBILITY AnyNewerVersion
 )
 
-configure_package_config_file(${CMAKE_CURRENT_LIST_DIR}/cmake/MsxmlxConfig.cmake.in
-    ${CMAKE_CURRENT_BINARY_DIR}/MsxmlxConfig.cmake
+configure_package_config_file(${CMAKE_CURRENT_LIST_DIR}/cmake/${PROJECT_NAME}Config.cmake.in
+    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
     INSTALL_DESTINATION ${INSTALL_CONFIGDIR}
 )
 
-#Install the config, configversion and custom find modules
+# Install the config, configversion and custom find modules
 install(FILES
-    ${CMAKE_CURRENT_BINARY_DIR}/MsxmlxConfig.cmake
-    ${CMAKE_CURRENT_BINARY_DIR}/MsxmlxConfigVersion.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
     DESTINATION ${INSTALL_CONFIGDIR}
 )
 
 # Exporting from the build tree
-export(EXPORT msxmlx-targets FILE ${CMAKE_CURRENT_BINARY_DIR}/MsxmlxTargets.cmake NAMESPACE Msxmlx::)
+export(EXPORT ${PROJECT_NAME}-targets FILE ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Targets.cmake NAMESPACE ${PROJECT_NAME}::)
 
-#Register package in user's package registry
-export(PACKAGE Msxmlx)
+# Register package in user's package registry
+export(PACKAGE ${PROJECT_NAME})
